tests/integration/snapshots/integration__conformance__n_structure_unicode-identifier.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
å
stderr ---
error: unexpected character `å`. expected start of a json value
 --> stdin:1:1
  |
1 | å
  | ^
